src/test/deca/syntax/invalid/homemade/test/test_pars_inv_class_method_oubli_accolade.deca
// Description:
//    tests de programme incorrect syntaxiquement pour les class
//
// Resultats:
//    Ligne 13 : Erreur (expected "{" )
//    
//
// Historique:
//    cree le 04/01/2023

class iden3{
    int x (float iden) 
    type var; instr;
}